DATAMATIKER/1/Programmering/modul 18/MyArrayListExercise/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Programs\BlueJ Windows\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Programs\BlueJ Windows\bluej\lib\bluejcore.jar;C:\Programs\BlueJ Windows\bluej\lib\junit-4.11.jar;C:\Programs\BlueJ Windows\bluej\lib\hamcrest-core-1.3.jar;C:\Programs\BlueJ Windows\bluej\lib\lang-stride.jar;C:\Programs\BlueJ Windows\bluej\lib\userlib\pi4j-core.jar;C:\Programs\BlueJ Windows\bluej\lib\userlib\pi4j-device.jar;C:\Programs\BlueJ Windows\bluej\lib\userlib\pi4j-gpio-extension.jar;C:\Programs\BlueJ Windows\bluej\lib\userlib\pi4j-service.jar;C:\Programs\GitHubs\Gundamnation\DATAMATIKER\1\Programmering\modul 18\MyArrayListExercise
-d
C:\Programs\GitHubs\Gundamnation\DATAMATIKER\1\Programmering\modul 18\MyArrayListExercise\doc
-encoding
UTF-8
-charset
UTF-8
C:\Programs\GitHubs\Gundamnation\DATAMATIKER\1\Programmering\modul 18\MyArrayListExercise\MyArrayList.java
<---- end of javadoc command ---->
Loading source file C:\Programs\GitHubs\Gundamnation\DATAMATIKER\1\Programmering\modul 18\MyArrayListExercise\MyArrayList.java...
C:\Programs\GitHubs\Gundamnation\DATAMATIKER\1\Programmering\modul 18\MyArrayListExercise\MyArrayList.java:21: error: illegal start of type
}
^
C:\Programs\GitHubs\Gundamnation\DATAMATIKER\1\Programmering\modul 18\MyArrayListExercise\MyArrayList.java:21: error: reached end of file while parsing
}
 ^
C:\Programs\GitHubs\Gundamnation\DATAMATIKER\1\Programmering\modul 18\MyArrayListExercise\MyArrayList.java:22: error: reached end of file while parsing
3 errors
